@@ -1,3 +1,14 @@
+2002-10-22  Werner Koch  <wk@gnupg.org>
+
+	* asn1-parse.y (yyparse): Prefix with _ksba_asn1_.
+
+	* asn1-func.c (_asn1_find_left): Made static.
+
+	* dn.c (parse_rdn): Add a parse-only mode to determine the end os
+	a part.
+	(_ksba_dn_from_str): Parse the string in revereted order as
+	specified by rfc2253.
+
 2002-08-23  Werner Koch  <wk@gnupg.org>
 
 	* ksba.m4: Removed unnecessary libs
